--- a/site/index.Rmd
+++ b/site/index.Rmd
@@ -13,19 +13,19 @@ output:
 ---
 
 Hi!
-I'm Hadley Wickham, Chief Scientist at [RStudio](http://rstudio.com), and an Adjunct Professor of Statistics at the [University of Auckland](https://www.stat.auckland.ac.nz), [Stanford University](https://datalab.stanford.edu), and [Rice University](http://statistics.rice.edu).
+I'm Hadley Wickham, Chief Scientist at [Posit](https://posit.co), where (among other things) I lead the [tidyverse](https://tidyverse.org) team.
 I build tools (computational and cognitive) that make data science easier, faster, and more fun.
 I'm from New Zealand but I currently live in Houston, TX with my husband and dogs.
 
 If you'd like to learn more about what I do, and how to use R effectively, you might enjoy one of my books (which are all free to read on the web):
 
--   [R for Data Science](http://r4ds.had.co.nz/), with Garrett Grolemund, is the place to start if you want to learn how to do data science with R.
+-   [R for Data Science](http://r4ds.had.co.nz/), with [Mine Çetinkaya-Rundel](https://mine-cr.com) and Garrett Grolemund, is the place to start if you want to learn how to do data science with R.
 
 -   [ggplot2: elegant graphics for data analysis](https://ggplot2-book.org) shows you how to use ggplot2 to create graphics that help you understand your data.
 
 -   [Advanced R](http://adv-r.hadley.nz/) helps you master R as a programming language, teaching you what makes R tick.
 
--   [R packages](http://r-pkgs.org/) teaches good software engineering practices for R, using packages for bundling, documenting, and testing your code.
+-   [R packages](http://r-pkgs.org/), with [Jenny Bryan](https://jennybryan.org/about/), teaches good software engineering practices for R, using packages for bundling, documenting, and testing your code.
 
 Outside of work, I love to [bake](https://recipes.had.co.nz) and make [cocktails](https://cocktails.hadley.nz).
-My sister [Charlotte](http://cwick.co.nz/) is a Assistant Professor of Statistics at Oregon State University.
+My sister [Charlotte](http://cwick.co.nz/) also works for Posit as a Developer Educator.
