--- a/site/index.Rmd
+++ b/site/index.Rmd
@@ -19,7 +19,7 @@ I'm from New Zealand but I currently live in Houston, TX with my husband and dog
 
 If you'd like to learn more about what I do, and how to use R effectively, you might enjoy one of my books (which are all free to read on the web):
 
--   [R for Data Science](http://r4ds.had.co.nz/), with [Mine Çetinkaya-Rundel](https://mine-cr.com) and Garrett Grolemund, is the place to start if you want to learn how to do data science with R.
+-   [R for Data Science](http://r4ds.hadley.nz/), with [Mine Çetinkaya-Rundel](https://mine-cr.com) and Garrett Grolemund, is the place to start if you want to learn how to do data science with R.
 
 -   [ggplot2: elegant graphics for data analysis](https://ggplot2-book.org) shows you how to use ggplot2 to create graphics that help you understand your data.
 
